--- a/resources/sass/blocks/_faq.scss
+++ b/resources/sass/blocks/_faq.scss
@@ -9,6 +9,14 @@ section#FAQ {
     }
     .faq.active .answer {
         max-height: 30rem;
+        animation: fade 0.5s ease-in-out;
+    }
+    svg {
+        transition: transform 0.2s ease-in
+    }
+    .faq.active svg {
+        transform: rotate(0deg);
+        transition: all 0.5s;
     }
     .question  {
         display: flex;
@@ -33,12 +41,13 @@ section#FAQ {
         max-height: 0;
         overflow: hidden;
         margin-bottom: 2rem;
+        transition: max-height 0.5s ease;
         p {
             color: #532f1c;
             font-size: 2.2rem;
             font-weight: 700;
             margin-left: 5.4rem;
-            margin-bottom: 2rem;
+
         }
     }
     .form {
@@ -103,3 +112,13 @@ section#FAQ {
     }
 }
 
+@keyframes fade {
+    from {
+        opacity: 0;
+        transform: translateY(-1rem);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0rem);
+    }
+}
