--- a/resources/sass/blocks/_header.scss
+++ b/resources/sass/blocks/_header.scss
@@ -6,7 +6,7 @@ header.header {
     .wrapper {
         padding: 1rem 0;
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 53% 47%;
        .nav {
            display: flex;
            align-items: center;
