--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 
+@import "helpers/fonts";
+
 html {
     font-size: 10px;
     overflow-x: hidden;
@@ -38,6 +40,7 @@ p {
     text-align: center;
     font-weight: 700;
     text-transform: uppercase;
+    font-family: 'EBA-DINPro-CondensedBlack';
 }
 .amount-1 {
     margin-top: 3rem;
@@ -51,6 +54,13 @@ p {
     background-color: #ffcc00;
     border-radius: 1rem;
     border: 1px solid white;
+    position: relative;
+    .yellow_anim {
+        width: 21rem;
+        position: absolute;
+        left: -8rem;
+        transform: rotate(345deg);
+    }
     .size {
         font-size: 3.2rem;
         font-weight: 700;
@@ -74,6 +84,13 @@ p {
     background-color: #ff000a;
     border-radius: 1rem;
     border: 1px solid white;
+    position: relative;
+    .red_anim {
+        max-width: 19rem;
+        position: absolute;
+        left: -9rem;
+        transform: rotate(345deg);
+    }
     .size {
         font-size: 3.2rem;
         font-weight: 700;
@@ -120,7 +137,26 @@ p {
         width: 90vmin;
     }
 }
+/* width */
+::-webkit-scrollbar {
+    width: 1rem;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #552100;
+    border-radius: 1rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
 @import "blocks/header";
 @import "blocks/footer";
 @import "blocks/hero";
